fixing hangman screenshot spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -112,7 +112,7 @@ body {
 }
 
 .hangman {
-  margin-top: 135em;
+  margin-top: 132em;
 }
 
 #about-section {
